modified:   cpp-pointers.html

--- a/cpp-pointers.html
+++ b/cpp-pointers.html
@@ -62,4 +62,4 @@ int main () {
 	int a = 5, b = 10;
 	swap(&a, &b);
 	return 0;
-}</code></pre></div><div><h3>5. Further reading</h3></div><div class="box"><a href="https://www.ntu.edu.sg/home/ehchua/programming/cpp/cp4_PointerReference.html" target="__blank">Pointers</a><br><a href="https://www.cs.fsu.edu/~myers/c++/notes/references.html" target="__blank">Pass by reference</a></div><script src="js/prism3.js"></script></body></html>
+}</code></pre></div><div><h3>5. Further reading</h3></div><div class="box"><a href="https://www.ntu.edu.sg/home/ehchua/programming/cpp/cp4_PointerReference.html" target="__blank">Pointers</a><br><a href="https://www.cs.fsu.edu/~myers/c++/notes/references.html" target="__blank">Pass by reference</a><br><a href="http://www.cplusplus.com/doc/tutorial/arrays/" target="__blank">Arrays</a></div><script src="js/prism3.js"></script></body></html>
